# rust-crawler-example

./: Cargo.toml  README.md  seed.txt
src/: crawler.rs  main.rs
