[package]
name = "rust-crawler-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
console-subscriber = "0.1.10"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["client", "http1", "http2"] }
hyper-timeout = "0.4.1"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
